XXX CSS Framework Change Log
----------------------------------------------------------------

2010-10-04  Domenico Monaco  <domenico.monaco@kiuz.it>
--
  New features:
    * Created new file "debug.css"
        * Exported into debug.css ".showgird" eredited from grid.css
        * Added few conditions on "hover" pseudoclasses

    * Created new file "misc.css"

    * Created new file "grid-pull-push.css"
        * Exported into grid-pull-push.css all of ".pull" and ".push" classes eredited from grid.css


  Modify:
    * Deleted "Lib" folder
    * Changed ".container width from 950px into 960px
    * Deleted all of ".input.span-*" classes
    * Deleted all right margin by ".span" selectors
        * In Conseguence have added 10px of width into all of columns classes
        * Deleted ".last" class
    * Renamed ".span" into ".col"
    * Renamed ".append" into ".post"
    * Renamed ".prepend" into ".pre"


2010-10-03  Domenico Monaco  <domenico.monaco@kiuz.it>
--
    * Initial release of XXXX (Derived by Blueprint Css Framework).


Blueprint CSS Framework Change Log
----------------------------------------------------------------

Version 0.9 - Date May 29, 2009
--
  New features:
    * Changed all conditional comments to [if lt IE 8] for IE 8 compatibility [CMM]
    * Updated forms code to align inline form elements, with additions for IE 6 [CMM]
      * Use <form class="inline"> for inline forms
      * Use classes "text", "button", "radio" and "checkbox" on inputs for IE 6 compatibility


Version 0.8 - Date November 11, 2008
--
  New features:
    * Much of the flexibility of 0.6 has been pushed back into the core [CMM]
    * Plugins from 0.6 are now back in the core [CMM]

  Bug fixes:
    * Lots. See http://blueprintcss.lighthouseapp.com/projects/15318-blueprint-css


Version 0.7.1 - Date February 21, 2008
--
  New features:
    * Rubydoc for compressor [JC]

  Bug fixes:
    * Fixed bug in the compressor related to Rubygems. [JC]