@@ -1,4 +1,4 @@
-Copyright (c) 2007 - 2010 blueprintcss.org
+Copyright (c) 2007 - 2010
 
 Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
